# Schoolseal

./: README.md
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: lib.rs  test.rs
