[package]
name = "scholar_pay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "20.0.0" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"         # Optimize for binary size (Wasm target)
overflow-checks = true  # Keep overflow protection in release builds
debug = 0
strip = "symbols"
lto = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug-assertions = true